# SystemMonitor

./: CMakeLists.txt  README.md  build.sh
frontend/: package.json
frontend/src/: index.html  main.ts  style.css
src/: .server.cpp.swp  main.cpp  monitor.cpp  monitor.h  server.cpp  server.h  shared_state.h
